welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:14: error: type mismatch;
 found   : Unit
 required: Int
		compteur=compteur+1 
                        ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
	if ( ado(d)){
        ^